; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_random-devurandom.c_uv__random_devurandom.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_random-devurandom.c_uv__random_devurandom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@once = common dso_local global i32 0, align 4
@uv__random_devurandom_init = common dso_local global i32 0, align 4
@status = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [13 x i8] c"/dev/urandom\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv__random_devurandom(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* @uv__random_devurandom_init, align 4
  %7 = call i32 @uv_once(i32* @once, i32 %6)
  %8 = load i64, i64* @status, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i64, i64* @status, align 8
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @uv__random_readpath(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* %14, i64 %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @uv_once(i32*, i32) #1

declare dso_local i32 @uv__random_readpath(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
